[package]
name = "debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.2", features = ["full"] }
eyre = "*"
tokio = { version="1", features = ["rt-multi-thread"]}
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
serde = "1"
colored = "2.0"
futures = "0.3"