[package]
name = "debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.2", features = ["full"] }
alloy-dyn-abi = "0.8.0"
eyre = "*"
tokio = { version="1", features = ["rt-multi-thread"]}
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
serde = "1"
colored = "2.0"
futures = "0.3"
names = "0.14"
lazy_static = "1.4"